# generic-anon-ake

./: .gitignore  BENCHMARKS.md  Cargo.toml  README.md  table.toml
.cargo/: config
.github/: dependabot.yml
.github/workflows/: rust.yml
benches/: performance.rs  performance_classic.rs  performance_pq.rs  primitives.rs  primitives_classic.rs
graphics/: format_data.py  generate_graphics.py  requirements.txt
src/: client.rs  commitment.rs  config.rs  lib.rs  main.rs  main_classic.rs  pke.rs  protocol.rs  server.rs  supported_algs.rs  utils.rs  vrf.rs
src/classic/: ccapke.rs  client.rs  commitment.rs  config.rs  elgamal.rs  mod.rs  pke.rs  protocol.rs  server.rs  sig.rs
src/common/: client.rs  mod.rs  prf.rs  server.rs  utils.rs
src/pq/: ccapke.rs  client.rs  commitment.rs  config.rs  mod.rs  pke.rs  protocol.rs  server.rs  supported_algs.rs
src/protocol/: ccpake.rs  client.rs  commitment.rs  config.rs  emoji.rs  mod.rs  pke.rs  protocol.rs  server.rs  supported_algs.rs  utils.rs  vrf.rs  x_vrf.rs
tests/: ccpke_classic.rs  commitment.rs  pke.rs  pke_classic.rs  prf.rs  sig_classic.rs  utils.rs  vrf.rs  x_vrf.rs
