[package]
name = "anon-sym-ake"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
hex = "0.4.3"
sha3 = "0.10.6"
aes-gcm = "0.10.1"
clap = { version = "4.0.19", features = ["derive"] }
ctr = "0.9.2"
aes = "0.8.2"

[dependencies.oqs]
git = "https://github.com/jiep/liboqs-rust"
branch = "protocol"
# version = "0.7.2"
default-features = false
features = ["dilithium", "kyber"]

[dev-dependencies]
criterion = "0.4.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[profile.release-lto]
inherits = "release"
lto = "fat"

[[bench]]
name = "performance"
harness = false

[[bench]]
name = "primitives"
harness = false

[lib]
name = "anon_sym_ake"
path = "src/lib.rs"

[[bin]]
name = "anon-sym-ake"
path = "src/main.rs"
