[package]
name = "generic-anon-ake"
version = "0.3.2-test9"
edition = "2021"
default-run = "generic-anon-ake"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
hex = "0.4.3"
sha3 = "0.10.6"
sha2 = "0.10.6"
aes-gcm = "0.10.1"
clap = { version = "4.1.8", features = ["derive"] }
ctr = "0.9.2"
aes = "0.8.2"
k256 = "0.13.0" #ecdsa

[target.'cfg(windows)'.dependencies]
pke_ecies = { git = "https://github.com/jiep/ecies-rs", default-features = false, features = ["pure"] }

[target.'cfg(not(windows))'.dependencies]
pke_ecies = { git = "https://github.com/jiep/ecies-rs" }

[dependencies.oqs]
git = "https://github.com/jiep/liboqs-rust"
branch = "protocol"
# version = "0.7.2"
default-features = false
features = ["dilithium", "kyber", "classic_mceliece"]

[dev-dependencies]
criterion = "0.4.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
strip = "debuginfo"

[profile.release-lto]
inherits = "release"
lto = "fat"

[[bench]]
name = "performance_pq"
harness = false

[[bench]]
name = "performance_classic"
harness = false

[[bench]]
name = "primitives"
harness = false

[[bench]]
name = "primitives_classic"
harness = false

[lib]
name = "generic_anon_ake"
path = "src/lib.rs"

[[bin]]
name = "generic-anon-ake"
path = "src/main.rs"

[[bin]]
name = "generic-anon-ake-classic"
path = "src/main_classic.rs"
